qtn-fcl-frtend final changes added

--- a/src/app/Marketing/qtnmfcl/qtndfcl-edit/qtndfcl-edit.component.html
+++ b/src/app/Marketing/qtnmfcl/qtndfcl-edit/qtndfcl-edit.component.html
@@ -32,7 +32,7 @@
             <auto-complete formControlName="qtnd_carrier_code" name="qtnd_carrier_code" id="qtnd_carrier_code"
               (CallBack)="callBack($event)" table="param" subtable="SEA CARRIER" [company_id]="getCompanyId()"
               [url]="url"
-              display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required>
+              display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
             </auto-complete>
           </div>
           <div class="col-sm-5">
