--- a/src/app/Marketing/qtnmfcl/qtnmfcl-search/qtnmfcl-search.component.html
+++ b/src/app/Marketing/qtnmfcl/qtnmfcl-search/qtnmfcl-search.component.html
@@ -17,7 +17,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Quote To / Quote#</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="qtnm_no"> </app-input>
+          <app-input type="text" formControlName="qtnm_no" [case]="'UPPER'"> </app-input>
         </div>
       </div>
     </div>
