--- a/src/app/master/customer/customer-edit/customer-edit.component.html
+++ b/src/app/master/customer/customer-edit/customer-edit.component.html
@@ -38,9 +38,9 @@
         </div>
 
         <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Display Name</label>
+          <label class="col-sm-4 form-label form-lable-sm" for="">Official Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="cust_display_name" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="cust_official_name" [case]="'UPPER'" required></app-input>
           </div>
         </div>
 
@@ -64,6 +64,85 @@
         </div>
 
         <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">City</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_city" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">State</label>
+          <div class="col-sm-4">
+            <auto-complete formControlName="cust_state_id" id="cust_state_id" (CallBack)="callBack($event)"
+              [table]="'param'" [subtable]="'state'" [company_id]="getCompanyId()" [url]="url" 
+              display_column="[{'caption':'CODE','value':'param_id'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+          </div>
+          <div class="col-sm-4">
+            <app-input maxlength="100" formControlName="cust_state_name" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Country</label>
+          <div class="col-sm-4">
+            <auto-complete formControlName="cust_country_id" id="cust_country_id" (CallBack)="callBack($event)"
+              [table]="'param'" [subtable]="'country'" [company_id]="getCompanyId()" [url]="url" 
+              display_column="[{'caption':'CODE','value':'param_id'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+          </div>
+          <div class="col-sm-4">
+            <app-input maxlength="100" formControlName="cust_country_name" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Zip Code</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_zip_code" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Contact</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_contact" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Title</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_title" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Tel</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_tel" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Fax</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_zip_code" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Mobile</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_contact" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Web</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_title" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Email</label>
+          <div class="col-sm-8">
+            <app-input maxlength="100" formControlName="cust_tel" [case]="'UPPER'" required></app-input>
+          </div>
+        </div>
+
+        <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Main Code</label>
           <div class="col-sm-8">
             <auto-complete formControlName="cust_parent_name" id="cust_parent_name" (CallBack)="callBack($event)"
@@ -71,6 +150,8 @@
               display_column="[{'caption':'code','value':'cust_id'},{'caption':'name','value':'cust_name'}]"></auto-complete>
           </div>
         </div>
+
+
 
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Credit-Limit</label>
