alen-settings-mail new changes added

--- a/src/app/master/mailserverm/mailserverm-list/mailserverm-list.component.html
+++ b/src/app/master/mailserverm/mailserverm-list/mailserverm-list.component.html
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/masters/paramEdit"
+  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/mailserverm/mailservermEdit"
     [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
