--- a/src/app/master/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/master/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -94,3 +94,8 @@
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
 </div>
+<div *ngIf="showModel">
+  <pre>
+    {{mform.value | json}}
+  </pre>
+</div>
