--- a/src/app/master/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/master/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -32,7 +32,7 @@
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Smtp Port</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="mail_smtp_port" [case]="'upper'" type="number" required></app-input>
+            <app-input maxlength="100" formControlName="mail_smtp_port" [case]="'upper'" required></app-input>
           </div>
         </div>
 
@@ -59,13 +59,11 @@
         </div>
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Bulkmail Batch Total</label>
-          <div class="col-sm-8">
+          <div class="col-sm-3">
             <app-input formControlName="mail_bulk_tot" type="number" required></app-input>
           </div>
-        </div>
-        <div class=" form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">Batch Split Count </label>
-          <div class="col-sm-8">
+          <label class="col-sm-2 form-label form-lable-sm" for="">Batch Split Count </label>
+          <div class="col-sm-3">
             <app-input formControlName="mail_bulk_sub" type="number" required></app-input>
           </div>
         </div>
