--- a/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/masters/mailservermEdit"
+  <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/admin/mailservermEdit"
     [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
 
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
