--- a/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -1,19 +1,13 @@
 <div class="page-header">
-  <h5>{{title}}</h5>
+  <h5>{{title}} ({{ mode === 'add' ? 'Add' : 'Edit'}})</h5>
   <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/admin/mailservermEdit"
     [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
-
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
-
 <form [formGroup]="mform">
-
   <div class="page-body">
-
     <div class="row">
-
       <div class="col-sm-6">
-
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Name</label>
           <div class="col-sm-8">
@@ -70,24 +64,19 @@
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Smtp User</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="mail_smtp_username" [case]="'upper'" required></app-input>
+            <app-input maxlength="100" formControlName="mail_smtp_username" [case]="'upper'"></app-input>
           </div>
         </div>
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Smtp Password</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="mail_smtp_pwd" [case]="'upper'" required></app-input>
+            <app-input maxlength="100" formControlName="mail_smtp_pwd" [case]="'upper'"></app-input>
           </div>
         </div>
       </div>
-
     </div>
-
   </div>
 </form>
-
-
-
 
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
