frontend new changes created

--- a/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
+++ b/src/app/user-admin/mailserverm/mailserverm-edit/mailserverm-edit.component.html
@@ -54,11 +54,11 @@
         <div class=" form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Bulkmail Batch Total</label>
           <div class="col-sm-3">
-            <app-input formControlName="mail_bulk_tot" type="number" required></app-input>
+            <app-input formControlName="mail_bulk_tot" type="number" ></app-input>
           </div>
           <label class="col-sm-2 form-label form-lable-sm" for="">Batch Split Count </label>
           <div class="col-sm-3">
-            <app-input formControlName="mail_bulk_sub" type="number" required></app-input>
+            <app-input formControlName="mail_bulk_sub" type="number" ></app-input>
           </div>
         </div>
         <div class=" form-group row">
