--- a/src/app/master/remark/remark-list/remark-list.component.html
+++ b/src/app/master/remark/remark-list/remark-list.component.html
@@ -1,30 +1,30 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/masters/customerEdit"
+  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/remark/customerEdit"
     [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,  appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
 <div class="page-search">
-  <app-customer-search [search_url]="'/api/customer/GetListAsync'" [input]="ms.getSearchRecord()"
-    (searchResult)="search($event)"></app-customer-search>
+  <app-remark-search [search_url]="'/api/remark/GetListAsync'" [input]="ms.getSearchRecord()"
+    (searchResult)="search($event)"></app-remark-search>
 </div>
 
 <div class="page-pagination">
-  <app-page [search_url]="'/api/customer/GetListAsync'" [page]="ms.getPageRecord()"
+  <app-page [search_url]="'/api/remark/GetListAsync'" [page]="ms.getPageRecord()"
     (pageEvents)="pageEvents($event)"></app-page>
 </div>
 
 <div class="page-body">
 
   <app-table [table]="table_data" [data]="ms.getRecords()" (callback_table)="callback_table($event)"
-    [delete_url]="'/api/customer/DeleteAsync'" [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder"
-    [row_id_name]="'cust_id'" [selected_id]="ms.selectedRow">
+    [delete_url]="'/api/remark/DeleteAsync'" [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder"
+    [row_id_name]="'rem_id'" [selected_id]="ms.selectedRow">
   </app-table>
 
 </div>
 
 <div class="page-pagination line-bottom">
-  <app-page [search_url]="'/api/customer/GetListAsync'" [page]="ms.getPageRecord()"
+  <app-page [search_url]="'/api/remark/GetListAsync'" [page]="ms.getPageRecord()"
     (pageEvents)="pageEvents($event)"></app-page>
 </div>
