--- a/src/app/master/remark/remark-search/remark-search.component.html
+++ b/src/app/master/remark/remark-search/remark-search.component.html
@@ -1,18 +1,13 @@
 <form [formGroup]="mform">
-
   <div class="row">
-
     <div class="col-sm-6">
-
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Name</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="cust_name"> </app-input>
+          <app-input type="text" formControlName="rem_name"> </app-input>
         </div>
       </div>
-
     </div>
-
     <div class="col-sm-6">
       <div class="form-group row">
         <div class="col-sm-12">
@@ -21,8 +16,4 @@
       </div>
     </div>
   </div>
-
-
-
-
 </form>
