--- a/src/app/master/remark/remark-search/remark-search.component.html
+++ b/src/app/master/remark/remark-search/remark-search.component.html
@@ -4,7 +4,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Name</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="rem_name"> </app-input>
+          <app-input type="text" formControlName="rem_name" [case]="'UPPER'"> </app-input>
         </div>
       </div>
     </div>
